try to fix position issue at quickBTN on mobile

--- a/main.css
+++ b/main.css
@@ -107,6 +107,7 @@ button{
     margin: 1rem;
 }
 .question-btns{
+    text-align: center;
     font-weight: var(--font-weight);
     font-size: 2.5rem;
     height: var(--btn-size);
@@ -181,7 +182,6 @@ button{
         opacity: 100%;
         border: 0.25rem solid black;
         clip-path: inset(0 0 0 0)
-
     }
 }
 @keyframes fade-out-animate-income{
@@ -379,7 +379,6 @@ button{
         animation: shining 2s infinite;
     }
     .question-btns{
-
         font-weight: var(--font-weight);
         height: var(--btn-size);
         width: var(--btn-size);
